--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     .view { display:none; background:white; padding:2rem; border-radius:8px; box-shadow:0 2px 10px rgba(0,0,0,.1); margin-bottom:2rem }
     .active { display:block }
 
-    .btn { padding:.5rem 1rem; background:var(--primary); color:white; border:none; border-radius:4px; cursor:pointer; margin:.25rem; touch-action:manipulation }
+    .btn { padding:.75rem 1.25rem; background:var(--primary); color:white; border:none; border-radius:4px; cursor:pointer; margin:.25rem; touch-action:manipulation; font-size:1rem; min-height:44px; } /* Larger touch targets */
     .btn:hover { background:var(--secondary) }
     .btn:disabled { opacity:.6; cursor:not-allowed }
     .btn-success { background:var(--success) }
@@ -112,25 +112,24 @@
     }
     .cat-footer { text-align:center; font-size:.75rem; color:#6b6b6b; padding:.25rem .5rem .6rem; text-transform:uppercase; letter-spacing:.02em }
 
-    /* Modal */
+    /* Modal - Fixed scrolling and responsiveness */
     .modal-backdrop {
       position:fixed; inset:0; background:rgba(0,0,0,.5);
       display:flex; align-items:center; justify-content:center;
       z-index:9999; padding:1rem;
-      overflow-y: auto;
+      overflow-y: auto; /* Allow backdrop scroll if needed */
     }
     .modal {
-      background:#fff; border-radius:10px; width:min(90%, 640px); max-height: 90vh; padding:1.25rem 1.25rem 1rem;
+      background:#fff; border-radius:10px; width:min(95%, 640px); max-height:90vh; overflow-y:auto; /* Scrollable content */
+      padding:1.25rem 1.25rem 1rem;
       box-shadow:0 10px 30px rgba(0,0,0,.25);
-      overflow-y: auto;
-      outline: none;
     }
     .modal h3 { margin-bottom:.5rem }
     .modal p { margin:.25rem 0 1rem }
     .modal .actions { display:flex; justify-content:flex-end; gap:.5rem; margin-top:.25rem }
     fieldset { border:1px solid var(--border); border-radius:6px; padding:.75rem; margin-bottom:1rem }
     legend { padding:0 .25rem; font-weight:600 }
-    .radio-row { display:flex; gap:1rem; margin-top:.5rem }
+    .radio-row { display:flex; gap:1rem; margin-top:.5rem; flex-wrap:wrap; } /* Wrap on small screens */
     .radio-row label { font-weight:500; margin:0; display:flex; align-items:center; gap:.35rem }
     .modal ol { margin-left:1.25rem; }
     .modal ol li { margin: .25rem 0; }
@@ -248,7 +247,7 @@
               <ol>
                 <li>Review the list of cards on the left.</li>
                 <li>Split the cards into categories that feel right to you.</li>
-                <li>There’s no right or wrong way. Sort by your intuition.</li>
+                <li>There's no right or wrong way. Sort by your intuition.</li>
               </ol>
             </div>
             <div class="stepbox">
@@ -272,10 +271,10 @@
     </div>
 
     <!-- Participant Info Modal -->
-    <div id="participantModal" class="modal-backdrop hidden" role="dialog" aria-modal="true" aria-labelledby="participantModalTitle" aria-describedby="participantModalDesc">
-      <div class="modal" tabindex="0" role="document">
+    <div id="participantModal" class="modal-backdrop hidden" role="dialog" aria-modal="true" aria-labelledby="participantModalTitle">
+      <div class="modal" tabindex="-1">
         <h3 id="participantModalTitle">Before you begin</h3>
-        <p id="participantModalDesc">Please enter your details to proceed.</p>
+        <p>Please enter your details to proceed.</p>
         <label for="pName">Full name</label>
         <input id="pName" type="text" placeholder="Your name" required>
         <label for="pId">ID number</label>
@@ -291,8 +290,8 @@
         <fieldset>
           <legend>Is your family home outside of Suva/Nausori? (Yes/No)</legend>
           <div class="radio-row">
-            <label><input type="radio" name="pOutsideHome" value="Yes" required> Yes</label>
-            <label><input type="radio" name="pOutsideHome" value="No" required> No</label>
+            <label><input type="radio" name="pOutsideHome" value="Yes"> Yes</label>
+            <label><input type="radio" name="pOutsideHome" value="No"> No</label>
           </div>
         </fieldset>
         <div class="actions">
@@ -302,10 +301,10 @@
     </div>
 
     <!-- Instructions Modal -->
-    <div id="instructionsModal" class="modal-backdrop hidden" role="dialog" aria-modal="true" aria-labelledby="instructionsModalTitle" aria-describedby="instructionsModalDesc">
-      <div class="modal" tabindex="0" role="document">
+    <div id="instructionsModal" class="modal-backdrop hidden" role="dialog" aria-modal="true" aria-labelledby="instructionsModalTitle">
+      <div class="modal" tabindex="-1">
         <h3 id="instructionsModalTitle">Instructions</h3>
-        <p id="instructionsModalDesc"><strong>Here's how it works:</strong></p>
+        <p><strong>Here's how it works:</strong></p>
         <ol>
           <li>You will be presented with a list of cards.</li>
           <li>Drag and drop the cards into the categories that you think they fit the most.</li>
@@ -780,7 +779,7 @@ document.addEventListener('DOMContentLoaded', function() {
     return cat;
   }
 
-  document.getElementById('addCategoryBtn').onclick = addCategory;
+  document.getElementById('addCategoryBtn').onclick = () => makeCategory();
 
   function submitSorting() {
     const uid = participantView.dataset.uid;
@@ -904,24 +903,29 @@ document.addEventListener('DOMContentLoaded', function() {
       });
   }
 
-  // Participant modal handlers
+  // Participant modal handlers - FIXED: Enhanced validation and debugging
   startSortingBtn.onclick = () => {
+    console.log('Continue button clicked'); // Debug: Check if event fires
     const name = pName.value.trim();
     const idNumber = pId.value.trim();
     const address = pAddress.value.trim();
     const course = pCourse.value.trim();
     const nationality = pNationality.value.trim();
     const ethnicity = pEthnicity.value.trim();
-    const outsideHome = (document.querySelector('input[name="pOutsideHome"]:checked') || {}).value || '';
-    
+    const selectedRadio = document.querySelector('input[name="pOutsideHome"]:checked');
+    const outsideHome = selectedRadio ? selectedRadio.value : '';
+
+    console.log('Validation values:', { name, idNumber, address, course, nationality, ethnicity, outsideHome }); // Debug
+
     if(!name || !idNumber || !address || !course || !nationality || !ethnicity || !outsideHome) {
-      alert('Please complete all fields');
+      alert('Please complete all fields, including selecting Yes/No for the home location question.');
       return;
     }
     
     participantMeta = { 
       name, idNumber, address, course, nationality, ethnicity, outsideHome 
     };
+    console.log('Validation passed, hiding modal'); // Debug
     participantModal.classList.add('hidden');
     instructionsModal.classList.remove('hidden');
     setTimeout(() => beginSortingBtn.focus(), 0);
@@ -1247,7 +1251,11 @@ document.addEventListener('DOMContentLoaded', function() {
   document.querySelectorAll('.modal').forEach(modal => {
     modal.setAttribute('aria-modal', 'true');
     modal.setAttribute('role', 'dialog');
+    modal.querySelector('button').setAttribute('aria-label', 'Close');
   });
+
+  // Tabs
+  tabButtons.forEach(btn => btn.addEventListener('click', () => activateTab(btn.dataset.tab)));
 });
 </script>
 </body>
